# docs/swagger.yaml
@@ -44,6 +44,23 @@ definitions:
       updated_at:
         type: integer
     type: object
+  models.UserFeel:
+    properties:
+      created_at:
+        type: integer
+      deleted:
+        type: boolean
+      deleted_at:
+        type: integer
+      feel_id:
+        type: integer
+      firebase_user_id:
+        type: string
+      reason:
+        type: string
+      updated_at:
+        type: integer
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -198,15 +215,21 @@ paths:
       tags:
       - /post
   /user:
-    get:
+    delete:
       consumes:
       - application/json
+      parameters:
+      - description: UserID
+        in: header
+        name: userID
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: ""
-      summary: Get User
+      summary: Delete User
       tags:
       - /user
     post:
@@ -243,6 +266,54 @@ paths:
         "200":
           description: ""
       summary: Update User
+      tags:
+      - /user
+  /user-feel:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: UserID
+        in: header
+        name: UserID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Get User's Feel
+      tags:
+      - /user-feel
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: User Feel
+        in: body
+        name: UserFeel
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserFeel'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Create User's Feel
+      tags:
+      - /user-feel
+  /user/get-info:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+      summary: Get User
       tags:
       - /user
 swagger: "2.0"
